# simple-chat

./: .gitignore  chainlit.md  pyproject.toml
.chainlit/: config.toml
simple_chatbot/: __init__.py  app.py  chain.py
